# lichuan_shizhangpai

./: README.md
_official_shizhangpai_sample/: README.md
_official_shizhangpai_sample/01-hello_world/hello_world/: sdkconfig
_official_shizhangpai_sample/01-hello_world/hello_world/main/: hello_world_main.c
_official_shizhangpai_sample/02-gpio_key/gpio_key/: sdkconfig
_official_shizhangpai_sample/03-humi_temp/humi_temp/: CMakeLists.txt
_official_shizhangpai_sample/04-attitude/attitude/main/: CMakeLists.txt  main.c  qmi8658c.c
_official_shizhangpai_sample/05-azimuth/azimuth/: CMakeLists.txt
_official_shizhangpai_sample/05-azimuth/azimuth/main/: CMakeLists.txt  qmc5883l.c
_official_shizhangpai_sample/07-spi_lcd/spi_lcd/: CMakeLists.txt  sdkconfig
_official_shizhangpai_sample/08-spi_lcd_touch/spi_lcd_touch/: sdkconfig
_official_shizhangpai_sample/10-scan/scan/: sdkconfig
_official_shizhangpai_sample/11-station/station/: sdkconfig
_official_shizhangpai_sample/12-sntp/sntp/: sdkconfig
_official_shizhangpai_sample/13-weather/weather/: sdkconfig
例程代码（IDF）_立创官方案例/02-gpio_key/gpio_key/: CMakeLists.txt
例程代码（IDF）_立创官方案例/04-attitude/attitude/: sdkconfig
例程代码（IDF）_立创官方案例/06-i2s_es8311/i2s_es8311/: sdkconfig
例程代码（IDF）_立创官方案例/09-lvgl_demo/lvgl_demo/: sdkconfig
例程代码（IDF）_立创官方案例/14-desktop_weather_/desktop_weather/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
例程代码（IDF）_立创官方案例/15-handheld_/15-handheld/handheld/main/: CMakeLists.txt  lvgl_demo_ui.c
例程代码（IDF）_立创官方案例/16-ai_chat/ai_chat/: sdkconfig.defaults
(+27 files in other folders)
